# python-project-52

./: .env  .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  requirements.txt
task_manager/: form.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py  0003_alter_task_labels.py  0004_alter_task_labels.py
task_manager/templates/: base.html  index.html  login.html  messages.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_list.html  label_update.html
task_manager/templates/statuses/: status_create.html  status_list.html  status_update.html
task_manager/templates/tasks/: task_create.html  task_delete.html  task_detail.html  task_list.html  task_update.html
task_manager/templates/users/: login.html  user_confirm_delete.html  user_create.html  user_delete.html  user_form.html  user_list.html  user_register.html  user_update.html
task_manager/users/: forms.py  middleware.py  mixins.py  tests.py  urls.py  views.py
